--- a/CSS/dom-ejercicios.css
+++ b/CSS/dom-ejercicios.css
@@ -36,6 +36,7 @@ img {
 
 .header {
   position: sticky;
+  z-index: 998;
   top: 0;
   padding: 0 0 0.5rem 0;
   background-color: var(--main-color);
@@ -243,4 +244,30 @@ img {
 
 .offline {
   background-color: #b71c1c;
+}
+
+/* - - - - - Search Filters  - - - - - -  */
+
+.cards {
+  display: grid;
+  grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
+}
+
+.card {
+  background-color: var(--second-color);
+  color: var(--main-color);
+  transition: all 0.5s ease-out;
+}
+
+.card img {
+  width: 100%;
+  height: auto;
+}
+
+.card figcaption {
+  padding: 1rem;
+}
+
+.filter {
+  display: none;
 }
