--- a/CSS/dom-ejercicios.css
+++ b/CSS/dom-ejercicios.css
@@ -36,8 +36,6 @@ section ul {
   list-style-type: none;
 }
 
-/* ++++   menu-hamburguesa  ++++ */
-
 .header {
   position: sticky;
   z-index: 998;
@@ -55,6 +53,8 @@ section ul {
   margin: 0 auto;
   text-align: center;
 }
+
+/* ++++   menu-hamburguesa  ++++ */
 
 .section {
   padding: 2rem;
@@ -263,6 +263,7 @@ section ul {
   background-color: var(--second-color);
   color: var(--main-color);
   transition: all 0.5s ease-out;
+  margin: 1.5rem;
 }
 
 .card img {
@@ -272,8 +273,13 @@ section ul {
 
 .card figcaption {
   padding: 1rem;
+  font-size: 1.25rem;
+  background-color: var(--second-color);
 }
 
 .filter {
-  display: none;
+  /* display: none; */
+  visibility: hidden;
+  opacity: 0;
+  order: 1; /* Con order llevamos al final las tarjetas ocultas, ya que las primeras son las que tienen order cero. */
 }
