Sorteo y geolocalización con mapa, ambos andan pero con errores

--- a/CSS/dom-ejercicios.css
+++ b/CSS/dom-ejercicios.css
@@ -252,6 +252,12 @@ section ul {
   background-color: #b71c1c;
 }
 
+/* - - - - - Geolocalización  - - - - - -  */
+
+#myMap {
+  height: 50vh;
+}
+
 /* - - - - - Search Filters  - - - - - -  */
 
 .cards {
