--- a/CSS/dom-ejercicios.css
+++ b/CSS/dom-ejercicios.css
@@ -27,7 +27,7 @@ body {
   overflow-x: hidden;
 }
 
-img {
+#plantaDev {
   max-width: 100%;
   height: auto;
 }
@@ -288,4 +288,68 @@ section ul {
   visibility: hidden;
   opacity: 0;
   order: 1; /* Con order llevamos al final las tarjetas ocultas, ya que las primeras son las que tienen order cero. */
+}
+
+/* - - - - - Responsive Slider  - - - - - -  */
+.slider {
+  position: relative;
+  /* border: thin solid blue; */
+  width: 80%;
+  margin: 1rem;
+  text-align: center;
+}
+
+.slider-slides {
+  position: relative;
+  height: 400px;
+}
+
+.slider-slide {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  opacity: 0;
+  visibility: hidden;
+  transition: opacity 1s ease;
+}
+
+.slider-slide img {
+  height: inherit;
+  width: inherit;
+  object-fit: cover;
+  object-position: 50% 0%;
+}
+
+.slider-slide.active {
+  opacity: 1;
+  visibility: visible;
+}
+
+.slider-btns {
+  position: absolute;
+  width: 100%;
+  top: 50%;
+  display: flex;
+  justify-content: space-between;
+  font-family: serif;
+  font-size: 4rem;
+  font-weight: bold;
+}
+
+.slider a {
+  display: block;
+  width: 4rem;
+  height: 4rem;
+  border-radius: 50%;
+  border: thin solid #000;
+  text-decoration: none;
+  background-color: #fff;
+  color: #000;
+  transition: all 0.3s ease;
+}
+
+.slider a:hover {
+  color: #4d4d4d;
 }
