--- a/CSS/dom-ejercicios.css
+++ b/CSS/dom-ejercicios.css
@@ -43,6 +43,7 @@ section ul {
   padding: 0 0 0.5rem 0;
   background-color: var(--main-color);
   color: var(--second-color);
+  transition: all 0.7s ease;
 }
 
 .header h1 {
@@ -239,17 +240,24 @@ section ul {
 .offline {
   position: sticky;
   top: 0;
+  left: 50%;
   z-index: 1000;
-  padding: 1rem;
+  padding: 0.5rem;
   font-size: 1.5rem;
   font-weight: bold;
   text-align: center;
   background-color: #1b5e20;
   color: #fff;
+  transition: all 0.5s ease;
 }
 
 .offline {
   background-color: #b71c1c;
+}
+
+/* Agregado para que el header se ponga gris en offline */
+.header.classOffline {
+  background-color: #888;
 }
 
 /* - - - - - Geolocalización  - - - - - -  */
@@ -294,8 +302,8 @@ section ul {
 .slider {
   position: relative;
   /* border: thin solid blue; */
-  width: 80%;
-  margin: 1rem;
+  width: 100%;
+  margin: 0.5rem;
   text-align: center;
 }
 
@@ -333,8 +341,8 @@ section ul {
   top: 50%;
   display: flex;
   justify-content: space-between;
-  font-family: serif;
-  font-size: 4rem;
+  font-family: "Gill Sans", "Gill Sans MT", Calibri, "Trebuchet MS", sans-serif;
+  font-size: 2.5rem;
   font-weight: bold;
 }
 
@@ -352,4 +360,11 @@ section ul {
 
 .slider a:hover {
   color: #4d4d4d;
+}
+
+/* - - - - -   Scroll Spy    - - - - - -  */
+/* Creamos una media query, para diferenciar por ancho el menú que va a mostrar. 
+En este caso los siguientes estilos se utilizarán cuando el ancho supere 1024 pixel */
+
+@media screen and (min-width: 1024px) {
 }
