Formularios finalizados ok

--- a/CSS/dom-ejercicios.css
+++ b/CSS/dom-ejercicios.css
@@ -419,3 +419,90 @@ En este caso los siguientes estilos se utilizarán cuando el ancho supere 1024 p
     left: calc(4.25rem + 1vw);
   }
 }
+
+/*  - - - -    CONTACT FORM VALIDATION   - - - -  */
+.contact-form {
+  --form-ok-color: #4caf50;
+  --form-error-color: #f44336;
+  margin-left: auto;
+  margin-right: auto;
+  width: 90%;
+}
+
+.contact-form > * {
+  /* Usamos simbolo mayor y asterisco para identificar a todos los hijos de "contact-form" */
+  padding: 0.5rem;
+  margin: 1rem auto;
+  display: block;
+  width: 100%;
+}
+
+.contact-form textarea {
+  resize: none;
+}
+
+.contact-form legend,
+.contact-form-response {
+  font-size: 1.5rem;
+  font-weight: bold;
+  text-align: center;
+}
+
+.contact-form input,
+.contact-form textarea {
+  font-size: 1rem;
+  font-family: sans-serif;
+}
+
+.contact-form input[type="submit"] {
+  /* Para los input que tengan atributo type submit, dentro de "contact-form" */
+  width: 30%;
+  font-weight: bold;
+  cursor: pointer;
+  color: #fff;
+  background-color: #05b80b;
+  border: none;
+  border-radius: 7px;
+}
+
+.contact-form *::placeholder {
+  /* Para todos los hijos de "contact-form" que tenga atributo "placeholder"  */
+  color: #000;
+}
+
+.contact-form [required]:valid {
+  /* Que esté dentro de "contact-form" y que tenga el atributo "required" y sea válido */
+  border: thin solid var(--form-ok-color);
+}
+
+.contact-form [required]:invalid {
+  border: thin solid var(--form-error-color);
+}
+
+.contact-form-error {
+  margin-top: -1rem;
+  background-color: var(--form-error-color);
+  color: #fff;
+  transition: all 800ms ease;
+}
+
+.contact-form-error.is-active {
+  display: block;
+  animation: show-message 1s 1 normal 0s ease-out both;
+}
+
+.none {
+  display: none;
+}
+
+@keyframes show-message {
+  0% {
+    visibility: hidden;
+    opacity: 0;
+  }
+
+  100% {
+    visibility: visible;
+    opacity: 1;
+  }
+}
