--- a/ajax-ejercicios/spa/app/assets/style.css
+++ b/ajax-ejercicios/spa/app/assets/style.css
@@ -42,12 +42,12 @@ img {
   background-color: #dc3545;
 }
 
-.form-search {
+.search-form {
   margin: auto;
   text-align: center;
 }
 
-.form-search input {
+.search-form input {
   display: block;
   margin: auto;
   padding: 0.25rem;
@@ -92,4 +92,42 @@ img {
 .post-card p {
   display: flex;
   justify-content: space-between;
+}
+
+.post-page {
+  margin: 1rem auto;
+  padding: 1rem;
+  width: 95%;
+  background-color: rgb(235, 234, 234);
+  border-radius: 8px;
+}
+
+.post-page > aside {
+  margin: auto;
+  width: 60%;
+  text-align: center;
+}
+
+.post-page > hr {
+  border: thin solid rgb(121, 121, 121);
+  margin: 0.75rem auto;
+  width: 90%;
+}
+
+.post-page time {
+  margin: 1rem auto;
+  display: block;
+}
+
+.post-page > article {
+  padding: 0 0.5rem;
+}
+
+.post-page img,
+.post-page audio,
+.post-page video,
+.post-page iframe {
+  margin: auto;
+  display: block;
+  max-width: 100%;
 }
